<?xml version="1.0"?>
<package format="2">
  <name>zed2_ros_tools</name>
  <version>0.0.0</version>
  <description>The ROS package for zed2 sensor</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <export>
  </export>
</package>